--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "vk-miniapps-deploy"
+    "deploy": "vk-miniapps-deploy",
+    "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=10888 app_id=8174360 endpoints=[web]"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -17,6 +18,7 @@
     "@vkontakte/vk-bridge": "latest",
     "@vkontakte/vk-miniapps-deploy": "0.0.25",
     "@vkontakte/vkui": "5.1.0",
+    "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
