--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vkontakte/vkui": "5.1.0",
     "axios": "^1.4.0",
     "babel-eslint": "^10.1.0",
+    "date-fns": "^2.30.0",
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
