--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "http-proxy-middleware": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
